package fogs.proto.msg;
import "Base.proto";


//---------练习模块相关

//练习数据结构
message PracticeInfo
{
	optional uint32 id				= 1; //练习ID
	optional uint32 finished		= 2; //是否已完成（1：是，0：否）
}


//开始操作练习
message BeginPractice
{
	optional uint32 id				= 1; //练习ID
}

//开始操作练习回复
message BeginPracticeResp
{
	optional uint32 result			= 1; //
	optional uint32 id				= 2; //练习ID
	optional uint64 session_id		= 3; //SessionID
}

//结束操作练习
message EndPractice
{
	optional uint64 session_id		= 1; //SessionID
	optional uint32 goal_times		= 2; //命中次数
}

//结束操作练习回复
message EndPracticeResp
{
	optional uint32 result			= 1; //
	optional uint32 time			= 2; //练习赛结束时间
	repeated KeyValueData awards	= 3; //奖励
	optional uint32 id				= 4;
}

//退出操作练习
message ExitPractice
{
	optional uint64 session_id		= 1; //SessionID
}

//退出操作练习回复
message ExitPracticeResp
{
	optional uint32 result			= 1; //
}